testsuite/bsc.interra/messages/EAmbOper/EAmbOper.bs.bsc-out.expected
checking package dependencies
compiling EAmbOper.bs
Error: "EAmbOper.bs", line 22, column 14: (P0074)
  Ambiguous operator combination with == and ==.
